fix: Update spacing for major icons on small displays.

--- a/src/assets/scss/components/_icon.scss
+++ b/src/assets/scss/components/_icon.scss
@@ -87,7 +87,6 @@
 
 		@include breakpoint(small) {
 			&.major {
-				margin: 0 0 (_size(element-margin) * 0.75) 0;
 				padding: 0.35em;
 
 				&:before {
