--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -33,6 +33,10 @@
 					border-bottom-left-radius: 0;
 				}
 			}
+
+			.slack {
+				padding: 0.5em;
+			}
 		}
 
 		@include breakpoint(large) {
